--- a/GigaChatSDK/GigaChatSDK.csproj
+++ b/GigaChatSDK/GigaChatSDK.csproj
@@ -4,7 +4,21 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Authors>Valeriy Elykomov</Authors>
+    <Title>Client-library GigaChat SDK</Title>
+    <Product>GigaChatSDK</Product>
+    <Description>Клиент для работы с GigaChat API</Description>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/async-walker/GigaChatSDK-dotnet</RepositoryUrl>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
