Add new tests, move test projects

--- a/Tests/GigaChatSDK.IntegrationTests/GigaChatSDK.IntegrationTests.csproj
+++ b/Tests/GigaChatSDK.IntegrationTests/GigaChatSDK.IntegrationTests.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GigaChatSDK\GigaChatSDK.csproj" />
+    <ProjectReference Include="..\..\GigaChatSDK\GigaChatSDK.csproj" />
   </ItemGroup>
 
   <ItemGroup>
